--- a/index.html
+++ b/index.html
@@ -22,44 +22,59 @@
             <div class="img-left">
                 <img src="https://piscarocarlos.github.io/Chippewa/images/cabin.jpg" alt="Cabin">
             </div>
+            <div class="text-left">
 
-            <h2>Cabin</h2>
-            <p>Illa argumenta propria videamus, cur omnia sint paria peccata. Quamquam te quidem video minime esse
-                deterritum. Beatus sibi videtur esse moriens. In qua quid est boni praeter summam voluptatem.</p>
+                <h2>Cabin</h2>
+                <p>Illa argumenta propria videamus, cur omnia sint paria peccata. Quamquam te quidem video minime esse
+                    deterritum. Beatus sibi videtur esse moriens. In qua quid est boni praeter summam voluptatem.</p>
+            </div>
 
         </section>
         <section>
             <div class="img-right">
                 <img src="https://piscarocarlos.github.io/Chippewa/images/teepee.jpg" alt="Cabin">
             </div>
-            <h2>Teepees</h2>
-            <p>Teepees
-                A quibus propter discendi cupiditatem videmus ultimas terras esse peragratas. Laelius clamores sofòw
-                ille so lebat Edere compellans gumias ex ordine nostros.</p>
+            <div class="text-right">
+                <h2>Teepees</h2>
+                <p>
+                    A quibus propter discendi cupiditatem videmus ultimas terras esse peragratas. Laelius clamores sofòw
+                    ille so lebat Edere compellans gumias ex ordine nostros.</p>
+            </div>
         </section>
         <section>
             <div class="img-left">
                 <img src="https://piscarocarlos.github.io/Chippewa/images/fishing.jpg" alt="Cabin">
             </div>
-            <h2>Fishing</h2>
-            <p>Que Manilium, ab iisque M. Intellegi quidem, ut propter aliam quampiam rem, verbi gratia propter
-                voluptatem, nos amemus; An eum locum libenter invisit ultimas.</p>
+            <div class="text-left">
+
+                <h2>Fishing</h2>
+                <p>Que Manilium, ab iisque M. Intellegi quidem, ut propter aliam quampiam rem, verbi gratia propter
+                    voluptatem, nos amemus; An eum locum libenter invisit ultimas.</p>
+            </div>
         </section>
         <section>
             <div class="img-right">
                 <img src="https://piscarocarlos.github.io/Chippewa/images/archery.jpg" alt="Cabin">
             </div>
-            <h2>Archery</h2>
-            <p>At ille pellit, qui permulcet sensum voluptate. Quid in isto egregio tuo officio et tanta fide-sic enim
-                existimo-ad corpus refers? Nec vero sum nescius esse utilitatem in historia.</p>
+            <div class="text-right">
+
+                <h2>Archery</h2>
+                <p>At ille pellit, qui permulcet sensum voluptate. Quid in isto egregio tuo officio et tanta fide-sic
+                    enim
+                    existimo-ad corpus refers? Nec vero sum nescius esse utilitatem in historia.</p>
+            </div>
         </section>
         <section>
             <div class="img-left">
                 <img src="https://piscarocarlos.github.io/Chippewa/images/canoeing.jpg" alt="Cabin">
             </div>
-            <h2>Canoeing</h2>
-            <p>Nam si propter voluptatem, quae est ista laus, quae possit e macello peti? Sin te auctoritas commovebat,
-                nobisne omnibus et Platoni ipsi nescio quem illum anteponebas.</p>
+            <div class="text-left">
+
+                <h2>Canoeing</h2>
+                <p>Nam si propter voluptatem, quae est ista laus, quae possit e macello peti? Sin te auctoritas
+                    commovebat,
+                    nobisne omnibus et Platoni ipsi nescio quem illum anteponebas.</p>
+            </div>
         </section>
         <h2 class="end">Rent the whole place for $3,670/night.</h2>
         <p>Maximum of 40 people.</p>
