--- a/index.html
+++ b/index.html
@@ -17,95 +17,111 @@
         </div>
 
     </header>
-    <div class="content">
-        <section>
-            <div class="img-left">
-                <img src="https://piscarocarlos.github.io/Chippewa/images/cabin.jpg" alt="Cabin">
-            </div>
-            <div class="text-left">
-
-                <h2>Cabin</h2>
-                <p>Illa argumenta propria videamus, cur omnia sint paria peccata. Quamquam te quidem video minime esse
-                    deterritum. Beatus sibi videtur esse moriens. In qua quid est boni praeter summam voluptatem.</p>
-            </div>
-
-        </section>
-        <section>
-            <div class="img-right">
-                <img src="https://piscarocarlos.github.io/Chippewa/images/teepee.jpg" alt="Cabin">
-            </div>
-            <div class="text-right">
-                <h2>Teepees</h2>
-                <p>
-                    A quibus propter discendi cupiditatem videmus ultimas terras esse peragratas. Laelius clamores sofòw
-                    ille so lebat Edere compellans gumias ex ordine nostros.</p>
-            </div>
-        </section>
-        <section>
-            <div class="img-left">
-                <img src="https://piscarocarlos.github.io/Chippewa/images/fishing.jpg" alt="Cabin">
-            </div>
-            <div class="text-left">
-
-                <h2>Fishing</h2>
-                <p>Que Manilium, ab iisque M. Intellegi quidem, ut propter aliam quampiam rem, verbi gratia propter
-                    voluptatem, nos amemus; An eum locum libenter invisit ultimas.</p>
-            </div>
-        </section>
-        <section>
-            <div class="img-right">
-                <img src="https://piscarocarlos.github.io/Chippewa/images/archery.jpg" alt="Cabin">
-            </div>
-            <div class="text-right">
-
-                <h2>Archery</h2>
-                <p>At ille pellit, qui permulcet sensum voluptate. Quid in isto egregio tuo officio et tanta fide-sic
-                    enim
-                    existimo-ad corpus refers? Nec vero sum nescius esse utilitatem in historia.</p>
-            </div>
-        </section>
-        <section>
-            <div class="img-left">
-                <img src="https://piscarocarlos.github.io/Chippewa/images/canoeing.jpg" alt="Cabin">
-            </div>
-            <div class="text-left">
-
-                <h2>Canoeing</h2>
-                <p>Nam si propter voluptatem, quae est ista laus, quae possit e macello peti? Sin te auctoritas
-                    commovebat,
-                    nobisne omnibus et Platoni ipsi nescio quem illum anteponebas.</p>
-            </div>
-        </section>
-        <h2 class="end">Rent the whole place for $3,670/night.</h2>
-        <p>Maximum of 40 people.</p>
-    </div>
-    <div class="content-2">
-        <h2 class="form-titel">Contact us to get started</h2>
-        <p>We'll reply when we get back from fishing.</p>
-        <form action="">
-            <div class="nom-mail">
-                <div class="name">
-                    <label for="name">Name</label>
-                    <input id="name" type="text" class="text">
+    <main>
+        <div class="content">
+            <section>
+                <div class="img-left">
+                    <img src="https://piscarocarlos.github.io/Chippewa/images/cabin.jpg" alt="Cabin">
                 </div>
-                <div class="mail">
-                    <label for="mail">Email</label>
-                    <input type="email" name="" id="mail">
+                <div class="text-left">
+
+                    <h2>Cabin</h2>
+                    <p>Illa argumenta propria videamus, cur omnia sint paria peccata. Quamquam te quidem video minime
+                        esse
+                        deterritum. Beatus sibi videtur esse moriens. In qua quid est boni praeter summam voluptatem.
+                    </p>
+                </div>
+
+            </section>
+            <section>
+                <div class="img-right">
+                    <img src="https://piscarocarlos.github.io/Chippewa/images/teepee.jpg" alt="Cabin">
+                </div>
+                <div class="text-right">
+                    <h2>Teepees</h2>
+                    <p>
+                        A quibus propter discendi cupiditatem videmus ultimas terras esse peragratas. Laelius clamores
+                        sofòw
+                        ille so lebat Edere compellans gumias ex ordine nostros.</p>
+                </div>
+            </section>
+            <section>
+                <div class="img-left">
+                    <img src="https://piscarocarlos.github.io/Chippewa/images/fishing.jpg" alt="Cabin">
+                </div>
+                <div class="text-left">
+
+                    <h2>Fishing</h2>
+                    <p>Que Manilium, ab iisque M. Intellegi quidem, ut propter aliam quampiam rem, verbi gratia propter
+                        voluptatem, nos amemus; An eum locum libenter invisit ultimas.</p>
+                </div>
+            </section>
+            <section>
+                <div class="img-right">
+                    <img src="https://piscarocarlos.github.io/Chippewa/images/archery.jpg" alt="Cabin">
+                </div>
+                <div class="text-right">
+
+                    <h2>Archery</h2>
+                    <p>At ille pellit, qui permulcet sensum voluptate. Quid in isto egregio tuo officio et tanta
+                        fide-sic
+                        enim
+                        existimo-ad corpus refers? Nec vero sum nescius esse utilitatem in historia.</p>
+                </div>
+            </section>
+            <section>
+                <div class="img-left">
+                    <img src="https://piscarocarlos.github.io/Chippewa/images/canoeing.jpg" alt="Cabin">
+                </div>
+                <div class="text-left">
+
+                    <h2>Canoeing</h2>
+                    <p>Nam si propter voluptatem, quae est ista laus, quae possit e macello peti? Sin te auctoritas
+                        commovebat,
+                        nobisne omnibus et Platoni ipsi nescio quem illum anteponebas.</p>
+                </div>
+            </section>
+            <div class="rent">
+                <h2 class="end">Rent the whole place for $3,670/night.</h2>
+                <p>Maximum of 40 people.</p>
+            </div>
+        </div>
+        <div class="content-2">
+            <h2 class="form-titel">Contact us to get started</h2>
+            <p>We'll reply when we get back from fishing.</p>
+            <form action="">
+                <div class="nom-mail">
+                    <div class="name">
+                        <label for="name">Name</label>
+                        <input id="name" type="text" class="text">
+                    </div>
+                    <div class="mail">
+                        <label for="mail">Email</label>
+                        <input type="email" name="" id="mail">
+                    </div>
                 </div>
                 <div class="timeline">
                     <label for="timelin">Timeline</label>
                     <input type="text" name="" id="timelin">
                 </div>
                 <div class="message">
-                    <label for="Messag">
-                        <input type="text" name="" id="messag">
-                    </label>
+                    <label for="Messag"> Message</label>
+                    <input type="text" name="" id="messag">
+
                 </div>
                 <button type="submit">SEND</button>
-            </div>
-        </form>
-    </div>
-
+            </form>
+        </div>
+    </main>
+    <footer>
+        <p>W5723 Lake View Chester, CA 96020 Design by <a href="#">Piscarocarlos</a></p>
+        <div class="icone">
+            <div class="icones"></div>
+            <div class="icones"></div>
+            <div class="icones"></div>
+        </div>
+        <p>&copy; Camp Chippewa</p>
+    </footer>
 </body>
 
 </html>
