--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg" href="image/logo.svg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +22,7 @@
     <main>
         <div class="content">
             <section>
-                <div class="img-left">
+                <div class="img-left animate__animated animate__fadeInLeft">
                     <img src="https://piscarocarlos.github.io/Chippewa/images/cabin.jpg" alt="Cabin">
                 </div>
                 <div class="text-left">
@@ -34,10 +36,10 @@
 
             </section>
             <section>
-                <div class="img-right">
+                <div class="img-right animate__animated animate__backInRight">
                     <img src="https://piscarocarlos.github.io/Chippewa/images/teepee.jpg" alt="Cabin">
                 </div>
-                <div class="text-right">
+                <div class="text-right animate__animated animate__fadeInRight">
                     <h2>Teepees</h2>
                     <p>
                         A quibus propter discendi cupiditatem videmus ultimas terras esse peragratas. Laelius clamores
@@ -46,7 +48,7 @@
                 </div>
             </section>
             <section>
-                <div class="img-left">
+                <div class="img-left animate__animated animate__fadeInLeft">
                     <img src="https://piscarocarlos.github.io/Chippewa/images/fishing.jpg" alt="Cabin">
                 </div>
                 <div class="text-left">
@@ -57,7 +59,7 @@
                 </div>
             </section>
             <section>
-                <div class="img-right">
+                <div class="img-right animate__animated animate__fadeInRight">
                     <img src="https://piscarocarlos.github.io/Chippewa/images/archery.jpg" alt="Cabin">
                 </div>
                 <div class="text-right">
@@ -70,7 +72,7 @@
                 </div>
             </section>
             <section>
-                <div class="img-left">
+                <div class="img-left animate__animated animate__fadeInLeft">
                     <img src="https://piscarocarlos.github.io/Chippewa/images/canoeing.jpg" alt="Cabin">
                 </div>
                 <div class="text-left">
